--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/angular": "^1.6.32",
+    "@types/angular-cookies": "^1.4.5",
     "@types/angular-sanitize": "^1.3.6",
     "@types/node": "^8.0.34",
     "concurrently": "^3.5.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-cookies": "^1.6.6",
     "angular-i18n": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "bootstrap-sass": "^3.3.7",
