--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,5 @@
 {
-  "files": [ "./**/*.{html,htm,css,js,ts,scss}" ],
+  "files": [ "./**/*.{html,htm,css,js}" ],
   "server": { 
     "baseDir": ["src", "./", "dist", "node_modules/bootstrap-sass/assets"]
   } 
