--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-i18n": "^1.6.6",
     "angular-sanitize": "^1.6.6",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
